syntax = "proto3";

package api;
option go_package = "client";

import "service/service.proto";

service Client {
  rpc ListenEvent (ServiceRequest) returns (stream EventData) {}
  rpc ExecuteTask (ExecuteTaskRequest) returns (TaskReply) {}  
  rpc ListenResult (ServiceRequest) returns (stream ResultData) {}
  rpc StartService (ServiceRequest) returns (ErrorReply) {}
  rpc StopService (ServiceRequest) returns (ErrorReply) {}
}

message ServiceRequest {
  service.Service service = 1;
}

message ErrorReply {
  string error = 1;
}

message EventData {
  string error = 1;
  string eventKey = 2;
  string eventData = 3;
}

message ExecuteTaskRequest {
  service.Service service = 1;
  string taskKey = 2;
  string taskData = 3;
}

message TaskReply {
  string executionID = 1;
  string error = 2;
}

message ResultData {
  string error = 1;
  string taskKey = 2;
  string outputKey = 3;
  string outputData = 4;
}